Generate server from API specification 2.3.0 https://gitlab.tandashi.de/GameBase/swagger-rest-api/-/commit/61dfe031ef4938d2676adf3cdae6600722ae87ad
