# openapi/api_gameserver.go
@@ -3,7 +3,7 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 2.1.0
+ * API version: 2.3.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -14,57 +14,42 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// Login - Login a user and return a JWT with the user object
-func Login(c *gin.Context) {
-	NewHttpRequestProcessingChain().Login(c)
-}
-
-// Logout - Invalidate the passed JWT
-func Logout(c *gin.Context) {
-	NewHttpRequestProcessingChain().Logout(c)
-}
-
-// Register - Register a user and return a JWT with the user object
-func Register(c *gin.Context) {
-	NewHttpRequestProcessingChain().Register(c)
-}
-
 // ConfigureContainer - Configure a game server based on POST body
 func ConfigureContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().ConfigureContainer(c)
+	authenticator.ConfigureContainer(c)
 }
 
 // DeleteContainer - Delete deployment of game server
 func DeleteContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().DeleteContainer(c)
+	authenticator.DeleteContainer(c)
 }
 
 // DeployContainer - Deploy a game server based on POST body
 func DeployContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().DeployContainer(c)
+	authenticator.DeployContainer(c)
 }
 
 // GetStatus - Query status of all deployments
 func GetStatus(c *gin.Context) {
-	NewHttpRequestProcessingChain().GetStatus(c)
+	authenticator.GetStatus(c)
 }
 
 // ListTemplates - Get a list of all available game server templates
 func ListTemplates(c *gin.Context) {
-	NewHttpRequestProcessingChain().ListTemplates(c)
+	authenticator.ListTemplates(c)
 }
 
 // RestartContainer - Restart a game server/container
 func RestartContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().RestartContainer(c)
+	authenticator.RestartContainer(c)
 }
 
 // StartContainer - Start a game server/container
 func StartContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().StartContainer(c)
+	authenticator.StartContainer(c)
 }
 
 // StopContainer - Stop a game server/container
 func StopContainer(c *gin.Context) {
-	NewHttpRequestProcessingChain().StopContainer(c)
+	authenticator.StopContainer(c)
 }
