# openapi/api_user.go
@@ -10,13 +10,13 @@
 
 package openapi
 
-type Status string
+import (
+	"net/http"
 
-// List of Status
-const (
-	UNKNOWN Status = "UNKNOWN"
-	STARTING Status = "STARTING"
-	RUNNING Status = "RUNNING"
-	STOPPED Status = "STOPPED"
-	ERROR Status = "ERROR"
+	"github.com/gin-gonic/gin"
 )
+
+// UpdateUserProfile - Update fields of a user's profile
+func UpdateUserProfile(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{})
+}
