# openapi/model_game_container_configuration_resources.go
@@ -3,7 +3,7 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 2.1.0
+ * API version: 2.3.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -15,7 +15,8 @@ type GameContainerConfigurationResources struct {
 	// Template path of backend directory that is going to be used for game container creation
 	TemplatePath string `json:"templatePath,omitempty"`
 
-	Ports GameContainerConfigurationResourcesPorts `json:"ports,omitempty"`
+	// PortMappings for the Container
+	Ports []PortMapping `json:"ports,omitempty"`
 
 	// Memory to be allocated
 	Memory int32 `json:"memory,omitempty"`
