# openapi/model_user_profile_password.go
@@ -3,17 +3,18 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 2.1.0
+ * API version: 2.3.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
 package openapi
 
-// GameContainerConfigurationResourcesPorts - Ports to be allocated
-type GameContainerConfigurationResourcesPorts struct {
+type UserProfilePassword struct {
 
-	Tcp []int32 `json:"tcp,omitempty"`
+	// Old password of the user as a confirmation step
+	Old string `json:"old,omitempty"`
 
-	Udp []int32 `json:"udp,omitempty"`
+	// New desired password of the user
+	New string `json:"new,omitempty"`
 }
