# openapi/routers.go
@@ -3,7 +3,7 @@
  *
  * This is the REST API used as an communication layer between backend and frontend.
  *
- * API version: 2.1.0
+ * API version: 2.3.0
  * Contact: gamebase@gahr.dev
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -57,7 +57,7 @@ func NewRouter() *gin.Engine {
 
 // Index is the index handler.
 func Index(c *gin.Context) {
-	c.String(http.StatusOK, "This is the GameBase Backend!")
+	c.String(http.StatusOK, "Hello World!")
 }
 
 var routes = Routes{
@@ -72,21 +72,21 @@ var routes = Routes{
 		"AuthLoginPost",
 		http.MethodPost,
 		"/auth/login",
-		Login,
+		AuthLoginPost,
 	},
 
 	{
 		"AuthLogoutDelete",
 		http.MethodDelete,
 		"/auth/logout",
-		Logout,
+		AuthLogoutDelete,
 	},
 
 	{
 		"AuthRegisterPost",
 		http.MethodPost,
 		"/auth/register",
-		Register,
+		AuthRegisterPost,
 	},
 
 	{
@@ -126,22 +126,29 @@ var routes = Routes{
 
 	{
 		"RestartContainer",
-		http.MethodGet,
+		http.MethodPost,
 		"/gs/restart/:id",
 		RestartContainer,
 	},
 
 	{
 		"StartContainer",
-		http.MethodGet,
+		http.MethodPost,
 		"/gs/start/:id",
 		StartContainer,
 	},
 
 	{
 		"StopContainer",
-		http.MethodGet,
+		http.MethodPost,
 		"/gs/stop/:id",
 		StopContainer,
+	},
+
+	{
+		"UpdateUserProfile",
+		http.MethodPost,
+		"/user/update",
+		UpdateUserProfile,
 	},
 }
